force-app/main/default/objects/Contract_Item__c/Contract_Item__c.object-meta.xml
<CustomObject>
    <label>Contract Job Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Job Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>