force-app/main/default/objects/Contract_Item__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Available to use on DSJ - Active on Contract</description>
    <formula>IF( 
	NOT(ISBLANK(Start_Date__c)) &amp;&amp; NOT(ISBLANK(End_Date__c)) &amp;&amp; AND((TODAY() &gt;= Start_Date__c),(TODAY() &lt;= End_Date__c)), 
	true, 
		IF(NOT(ISBLANK(Start_Date__c)) &amp;&amp; ISBLANK(End_Date__c) &amp;&amp; (TODAY() &gt;= Start_Date__c), 
		true, 
			IF(NOT(ISBLANK(End_Date__c)) &amp;&amp; ISBLANK(Start_Date__c) &amp;&amp; (End_Date__c &gt;= TODAY()), 
			true, 
				IF(ISBLANK(Start_Date__c) &amp;&amp; ISBLANK(End_Date__c),
				true,
				false
)
) 
) 
)</formula>
    <inlineHelpText>Auto calculated based on Start/End Date;
Active by default if Start/End Date is blank</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>