force-app/main/default/objects/Contract_Item__c/fields/Add_to_NDT__c.field-meta.xml
<CustomField>
    <fullName>Add_to_NDT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, item&apos;s hours will be calculated for NDT Hours on Unit</inlineHelpText>
    <label>Add to NDT</label>
    <type>Checkbox</type>
</CustomField>