force-app/main/default/objects/Contract_Item__c/fields/Auto_Populate_in_Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Auto_Populate_in_Daily_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, item will be automatically added to Daily Site Job/Report</inlineHelpText>
    <label>Auto Populate in Daily Report</label>
    <type>Checkbox</type>
</CustomField>