force-app/main/default/objects/Contract_Item__c/fields/Client_Contract_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Contract_Reference__c</fullName>
    <description>Contract Item Name in Clients Contract</description>
    <inlineHelpText>Contract Item Name in Clients Contract</inlineHelpText>
    <label>Client Contract Reference</label>
    <length>225</length>
    <type>Text</type>
</CustomField>