force-app/main/default/objects/Contract_Item__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>Contract__r.Contract_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>