force-app/main/default/objects/Contract_Item__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <description>Contract Status</description>
    <formula>IF( Contract__r.Contract_Active__c, &quot;Active&quot;, &quot;Inactive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>