force-app/main/default/objects/Contract_Item__c/fields/Contract_Units__c.field-meta.xml
<CustomField>
    <fullName>Contract_Units__c</fullName>
    <formula>Contract__r.Units_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Units</label>
    <type>Text</type>
</CustomField>