force-app/main/default/objects/Contract_Item__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <inlineHelpText>If not selected then auto-populated from Item</inlineHelpText>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Operating</fullName>
            </value>
            <value>
                <fullName>Rig Move</fullName>
            </value>
            <value>
                <fullName>SBWC(Stand By with Crew)</fullName>
            </value>
            <value>
                <fullName>SBWOC (Stand By Without Crew)</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Crew Travel</fullName>
            </value>
            <value>
                <fullName>Maintenance and Inspections</fullName>
            </value>
            <value>
                <fullName>Hire Equipment</fullName>
            </value>
            <value>
                <fullName>Extra Personnel</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Lump Sum Mobe</fullName>
            </value>
            <value>
                <fullName>Parts &amp; Consumables</fullName>
            </value>
            <value>
                <fullName>Crew Travel &amp; Accomodation</fullName>
            </value>
            <value>
                <fullName>Camp Operations</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>