force-app/main/default/objects/Contract_Item__c/fields/Item_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Item_Frequency__c</fullName>
    <label>Item Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per Day</fullName>
            </value>
            <value>
                <fullName>Per Site</fullName>
            </value>
            <value>
                <fullName>Multi Per Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>