force-app/main/default/objects/Contract_Item__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Item__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Item__c.BundledItem__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Contract Job Items</relationshipLabel>
    <relationshipName>Contract_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>