force-app/main/default/objects/Contract_Item__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rig_Operating</fullName>
                <label>Rig Operating</label>
            </value>
            <value>
                <fullName>SBWC</fullName>
            </value>
            <value>
                <fullName>SBWOC</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Rig Move</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Recharge</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Rig_Personnel</fullName>
                <label>Rig Personnel</label>
            </value>
            <value>
                <fullName>Camp Personnel</fullName>
            </value>
            <value>
                <fullName>Field Personnel</fullName>
            </value>
            <value>
                <fullName>Trades Personnel</fullName>
            </value>
            <value>
                <fullName>Camp Move</fullName>
            </value>
            <value>
                <fullName>Camp Operating</fullName>
            </value>
            <value>
                <fullName>Mobe / Demobe</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>