force-app/main/default/objects/Contract_Item__c/fields/Job_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Item_Description__c</fullName>
    <label>Job Item Description</label>
    <type>TextArea</type>
</CustomField>