force-app/main/default/objects/Contract_Item__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <inlineHelpText>If not selected then auto-populated from Item</inlineHelpText>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price/Hour</fullName>
            </value>
            <value>
                <fullName>Fixed Price/Quantity</fullName>
            </value>
            <value>
                <fullName>Flexi Price/Quantity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>