force-app/main/default/objects/Contract_Item__c/fields/Special_Item_Details__c.field-meta.xml
<CustomField>
    <fullName>Special_Item_Details__c</fullName>
    <label>Special Item Details</label>
    <type>TextArea</type>
</CustomField>