force-app/main/default/objects/Contract_Item__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <inlineHelpText>If not selected then auto-populated from Item</inlineHelpText>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rig</fullName>
            </value>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>