force-app/main/default/objects/Contract_Item__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <inlineHelpText>If not selected then auto-populated from Item</inlineHelpText>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Litre</fullName>
            </value>
            <value>
                <fullName>Piece</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>