force-app/main/default/objects/Contract_Item__c/fields/WD_Asset__c.field-meta.xml
<CustomField>
    <fullName>WD_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Asset</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>Asset__c.Parent_Asset__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Asset__c.Inventory_Item__c</field>
            <operation>equals</operation>
            <value>Stacked</value>
        </filterItems>
        <filterItems>
            <field>$Source.Contract__c</field>
            <operation>equals</operation>
            <valueField>Asset__c.Unit__r.Contract_New__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Contract Job Items</relationshipLabel>
    <relationshipName>Contract_Items</relationshipName>
    <type>Lookup</type>
</CustomField>