force-app/main/default/objects/Contract_Item__c/fields/WD_Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>WD_Asset_Name__c</fullName>
    <formula>WD_Asset__r.Name</formula>
    <label>WD Asset Name</label>
    <type>Text</type>
</CustomField>