force-app/main/default/objects/Contract_Item__c/validationRules/Cannot_Add_Contract_Job_Item.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Add_Contract_Job_Item</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Profile.Name  &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name  &lt;&gt; &apos;WD - Supervisory&apos;,
$Profile.Name  &lt;&gt; &apos;WD - Ops Manager -Rig&apos;,
$Profile.Name  &lt;&gt; &apos;WD - Finance&apos;,
$Profile.Name  &lt;&gt; &apos;WD - Ops Manager -Rig (New)&apos;,
$Profile.Name  &lt;&gt; &apos;WD - Ops Supervisor&apos;,
$Profile.Name &lt;&gt; &apos;WD - Supervisory 2.0&apos;,
$Profile.Name &lt;&gt; &apos;WD - BOO&apos;
)</errorConditionFormula>
    <errorDisplayField>Add_to_NDT__c</errorDisplayField>
    <errorMessage>You are not authorized to add/edit Contract Job Item. Kindly, contact your Operations Manager for same.</errorMessage>
</ValidationRule>