force-app/main/default/objects/Contract_Item__c/validationRules/Cant_Create_Job_Item_if_Contract_Expired.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Create_Job_Item_if_Contract_Expired</fullName>
    <active>true</active>
    <errorConditionFormula>IF( 
NOT( Contract__r.Contract_Active__c ), 
TRUE, 
FALSE 
)</errorConditionFormula>
    <errorMessage>One cannot create or edit Contract Job Item for an Inactive Contract</errorMessage>
</ValidationRule>