force-app/main/default/objects/Contract_Item__c/validationRules/Contract_Item_Duration_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Item_Duration_Limit</fullName>
    <active>true</active>
    <description>A Contract Item&apos;s Start &amp; End Date must be within Contract&apos;s Start &amp; End Date</description>
    <errorConditionFormula>IF(
NOT(ISBLANK(Start_Date__c)) &amp;&amp; 
NOT(ISBLANK(End_Date__c)) &amp;&amp;
NOT( 
AND(
Start_Date__c &gt;=  Contract__r.Contract_Start_Date__c, 
Start_Date__c &lt;= Contract__r.Contract_End_Date__c, 
End_Date__c &gt;=  Contract__r.Contract_Start_Date__c, 
End_Date__c &lt;= Contract__r.Contract_End_Date__c 
) 
),
true,
false
)</errorConditionFormula>
    <errorDisplayField>Add_to_NDT__c</errorDisplayField>
    <errorMessage>Contract Item&apos;s Start &amp; End Date must be within Contract&apos;s Start &amp; End Date</errorMessage>
</ValidationRule>