force-app/main/default/objects/Contract_Item__c/validationRules/If_Active_Status_must_be_Opeb.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Active_Status_must_be_Opeb</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Active__c, NOT(ISPICKVAL(Status__c, &quot;Open&quot;)))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Contract Job Item Status must be OPEN if Active is [] Checked.</errorMessage>
</ValidationRule>