force-app/main/default/objects/Contract_Item__c/validationRules/Special_Item_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Special_Item_Request</fullName>
    <active>false</active>
    <description>Mark Special Item Required</description>
    <errorConditionFormula>CONTAINS(Item_Name__r.Name , &apos;Special Item Request&apos;)  &amp;&amp;  ISBLANK( Special_Item_Details__c )</errorConditionFormula>
    <errorDisplayField>Special_Item_Details__c</errorDisplayField>
    <errorMessage>Please enter special item details.</errorMessage>
</ValidationRule>