force-app/main/default/objects/Contract_Item__c/listViews/Active_Contracts_All_Items.listView-meta.xml
<ListView>
    <fullName>Active_Contracts_All_Items</fullName>
    <columns>Contract__c</columns>
    <columns>Contract_Status__c</columns>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Rate__c</columns>
    <columns>Client_Contract_Reference__c</columns>
    <columns>Job_Item_Description__c</columns>
    <columns>Special_Item_Details__c</columns>
    <columns>Status__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Contract_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Contracts - All Items</label>
    <sharedTo>
        <group>Finance</group>
    </sharedTo>
</ListView>