force-app/main/default/objects/Contract_Item__c/listViews/All_Rig_Repair.listView-meta.xml
<ListView>
    <fullName>All_Rig_Repair</fullName>
    <columns>Contract__c</columns>
    <columns>Contract_Status__c</columns>
    <columns>Contract_Units__c</columns>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Job_Item_Description__c</columns>
    <columns>Rate__c</columns>
    <columns>Item_Frequency__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Auto_Populate_in_Daily_Report__c</columns>
    <columns>Active__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>Add_to_NDT__c</columns>
    <columns>Item_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>,Open</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Rig Repair</value>
    </filters>
    <label>All - Rig Repair</label>
</ListView>