force-app/main/default/objects/Contract_Item__c/listViews/Cooper_Basin_Wild_Desert_697.listView-meta.xml
<ListView>
    <fullName>Cooper_Basin_Wild_Desert_697</fullName>
    <columns>Contract__c</columns>
    <columns>NAME</columns>
    <columns>Job_Item_Description__c</columns>
    <columns>Rate__c</columns>
    <columns>Item_Frequency__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Auto_Populate_in_Daily_Report__c</columns>
    <columns>Active__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>Add_to_NDT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>697</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Transport: Wild Desert SA (697)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>Finance</group>
    </sharedTo>
</ListView>