force-app/main/default/objects/Contract_Item__c/listViews/Copy_of_Camp_8_Santos_SA_383_RM_View.listView-meta.xml
<ListView>
    <fullName>Copy_of_Camp_8_Santos_SA_383_RM_View</fullName>
    <columns>Contract__c</columns>
    <columns>NAME</columns>
    <columns>Job_Item_Description__c</columns>
    <columns>Item_Frequency__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Auto_Populate_in_Daily_Report__c</columns>
    <columns>Active__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>Add_to_NDT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>611</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Camp 10 - Santos SA (611) RM View</label>
    <sharedTo>
        <group>Camp_10</group>
        <group>Camp_Supervisor</group>
        <group>Finance</group>
        <group>Managing_Director</group>
    </sharedTo>
</ListView>