force-app/main/default/objects/Contract_Item__c/listViews/Copy_of_Camp_9_Santos_SA_552.listView-meta.xml
<ListView>
    <fullName>Copy_of_Camp_9_Santos_SA_552</fullName>
    <columns>Contract__c</columns>
    <columns>NAME</columns>
    <columns>Job_Item_Description__c</columns>
    <columns>Client_Contract_Reference__c</columns>
    <columns>Special_Item_Details__c</columns>
    <columns>Rate__c</columns>
    <columns>Item_Frequency__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Auto_Populate_in_Daily_Report__c</columns>
    <columns>Active__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>Add_to_NDT__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>552</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Camp 9 - Santos SA (552)</label>
    <sharedTo>
        <group>Camp_Supervisor</group>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
    </sharedTo>
</ListView>