force-app/main/default/objects/Contract_Item__c/listViews/DSJS_Checklist_Camp_8.listView-meta.xml
<ListView>
    <fullName>DSJS_Checklist_Camp_8</fullName>
    <columns>Contract__c</columns>
    <columns>Contract_Units__c</columns>
    <columns>NAME</columns>
    <columns>WD_Asset__c</columns>
    <columns>Job_Item_Description__c</columns>
    <columns>Special_Item_Details__c</columns>
    <columns>Rate__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Active__c</columns>
    <columns>Auto_Populate_in_Daily_Report__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Units__c</field>
        <operation>equals</operation>
        <value>Camp 08</value>
    </filters>
    <filters>
        <field>Auto_Populate_in_Daily_Report__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>DSJS Checklist | Camp 8</label>
</ListView>